--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,16 @@
         <artifactId>maven-surefire-report-plugin</artifactId>
         <version>2.20</version>
       </plugin>
+      <plugin>  
+          <groupId>org.apache.maven.plugins</groupId>  
+          <artifactId>maven-checkstyle-plugin</artifactId>  
+          <version>2.9.1</version>  
+      </plugin>  
+      <plugin>  
+          <groupId>org.apache.maven.plugins</groupId>  
+          <artifactId>maven-jxr-plugin</artifactId>  
+          <version>2.3</version>  
+      </plugin>            
     </plugins>
   </reporting>
 </project>
